Add Recycable Endpoint and delete Shoe Stuff
