# src/main/resources/openapi.yaml
@@ -6,6 +6,48 @@ info:
 tags:
   - name: 'Product Information'
 paths:
+  '/recycables':
+    get:
+      description: Get products that can be recycled
+      operationId: getRecycableProducts
+      tags:
+        - Recycables
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/ProductInformation'
+
+  '/recycables/{id}':
+    post:
+      description: Recycle a product
+      operationId: recycleProduct
+      tags:
+        - Recycables
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RecyclingRequest"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+
+
   '/products/{id}':
     get:
       description: Get product
@@ -81,3 +123,10 @@ components:
           type: string
     Resource:
       type: object
+
+    RecyclingRequest:
+      properties:
+        couponAmount:
+            type: number
+        toAddress:
+            type: string
